Try using postgres instead of MySQL

--- a/.env.test
+++ b/.env.test
@@ -5,6 +5,13 @@ MYSQL_USER=root
 MYSQL_PASSWORD=secret
 MYSQL_DATABASE=mercurios
 
+# postgres config
+POSTGRES_PASSWORD=secret
+POSTGRES_USER=root
+POSTGRES_DB=mercurios
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
+
 # nats config
 NATS_URL=nats://nats:4222
 
